@@ -2,5 +2,5 @@ current  beam
 message  Beam Model
 option   none
 optionX   ebeam_algebraic
-optionX   ebeam_fixed
+option   ebeam_fixed
 END
